# llm_eval

./: .gitignore  README.md  main.py  main_category.py  pyproject.toml  register_metric_test.py  requirements.txt  test_evaluator.py  test_llm_connection.py  test_metrics_system.py
docs/: category_evaluation_guide.md  custom_metrics_guide.md  llm_evaluation_metrics.md  metrics_system_guide.md
evaluator/: __init__.py  api.py  base.py  category_evaluator.py  category_mapping.py  datasets.py  evaluator.py  llm.py  metrics.py  metrics_db.py  metrics_factory.py  metrics_loader.py
evaluator/data/: metrics.db
evaluator/metrics/: __init__.py  acc_diff.py  bias_score.py  bleu.py  char_f1.py  contains_answer.py  exact_match.py  exact_match_figure.py  set_f1.py
evaluator/metrics/custom/: __init__.py  jaccard_similarity.py  rouge_l.py  word_count_similarity.py
tests/: test_evaluator.py  test_metrics_system.py
