[project]
name = "llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.5",
    "fastapi>=0.115.12",
    "fuzzywuzzy>=0.18.0",
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "python-levenshtein>=0.12.2",
    "sacrebleu>=2.0.0",
    "tabulate>=0.9.0",
    "tqdm>=4.64.0",
    "uvicorn>=0.34.1",
]
